crates/rome_js_formatter/tests/specs/prettier/js/destructuring-private-fields/assignment.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: assignment.js
---
# Input
```js
class C {
  #x = 1;
  m() {
    let x;
    ({ #x: x } = this);
  }
}

```

# Output
```js
class C {
  #x = 1;
  m() {
    let x;
    ({ #x: x } = this);
  }
}

```

# Errors
```
error[SyntaxError]: expected an assignment target, or a rest property but instead found '#x: x'
  ┌─ assignment.js:5:8
  │
5 │     ({ #x: x } = this);
  │        ^^^^^ Expected an assignment target, or a rest property here


```


